resources/sass/visit-us/_events-listing.scss
.events-listing {
    background-color: #F4F3F0;
    padding-inline: clamp(16px, 5vw, 32px);
    padding-block-start: clamp(40px, 5vw, 60px);
    padding-block-end: 1.75rem;
}

.events-listing .wrapper {
    max-inline-size: 1290px;
    margin: 0 auto;
    // padding: clamp(2.5rem, 2.1429rem + 1.7857vw, 3.75rem); /* 40px -> 60px */
    h2 {
        font-size: 2.25rem;
        font-weight: 500;
        margin: 0;
        @media (min-width: 600px) {
            padding-inline: 0;
        }
    }
}

.events-listing__events {
    margin-top: 1.875rem;

    .splide__arrow {
        background: rgba(0, 0, 0, 0.8);
        border-radius: 0;
        height: 2.5rem;
        opacity: 1;
        width: 2.5rem;

        svg {
            height: 100%;
            width: 100%;
        }
    }

    .splide__arrow--prev {
        transform: rotate(-90deg);
        left: -1rem;
    }

    .splide__arrow--next {
        transform: rotate(90deg);
        right: -1rem;
    }
}

.events-listing__event-card {
    background-color: white;

    .event-card__image {
        max-height: 225px;
        overflow: hidden;
        img {
            height: 100%;
            object-fit: cover;
            object-position: center;
            width: 100%;
        }
    }

    .event-card__text {
        padding: 1rem 1rem 1.75rem;

        h3 {
            font-size: 1.25rem;
            font-weight: bold;
            margin: 0;
        }

        a.tag {
            text-decoration: none;
            transition: .2s all;
        }

        a.tag:hover {
            background-color: darken(#F4F3F0, 10%);
        }

        p {
            font-size: 1.0625rem;
            margin-top: 0.75rem;
        }

        p:last-child {
            font-size: 1rem;
        }

        p.tag {
            margin-top: 0;
            font-size: 1rem;
            line-height: 29px;
            padding: 4px 12px;
        }
    }
}

.button--white {
    background-color: white;
    color: black;
    margin-top: 3rem;
    margin-left: auto;
}

